--- a/css/styles.css
+++ b/css/styles.css
@@ -11,18 +11,22 @@ h1 {
   padding: 0;
 }
 canvas {
+  margin: 0 auto;
+}
+canvas#canvas {
   display: block;
+  position: relative;
+  z-index: 1;
+}
+.canvas-container {
+  background-color: #333;
+  position: relative;
+  width: 1280px;
   margin: 0 auto;
 }
 
-.canvas-container {
-  position: relative;
-  /* width: 100%; */
-  /* margin: 0 auto; */
-}
-
 .wrapper {
-  background-color: #000000;
+  background-color: #eee;
 }
 
 .game-title h1 {
@@ -31,16 +35,16 @@ canvas {
 
 #canvas-cow {
   position: absolute;
+  z-index: 11;
   left: 0px;
   top: 0px;
-  z-index: 1;
 }
 
 #canvas-ufo {
   position: absolute;
+  z-index: 12;
   left: 0px;
   top: 0px;
-  z-index: 1;
 }
 
 footer {
