--- a/css/gameover.css
+++ b/css/gameover.css
@@ -3,12 +3,12 @@ body {
   margin: 0;
 }
 
-.blah {
+.wrapper {
   background: #00b8ff;
   height: 40vh;
 }
 
-.foo {
+.text {
   display: flex;
   justify-content: center;
   font-size: 20vh;
@@ -23,7 +23,7 @@ h2 {
   margin: 0;
 }
 
-.randy {
+.links-wrapper {
   height: 60vh;
   background: #2a94be;
   display: flex;
